--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,5 +1,8 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    <div>registration</div>
+    <div style="width:50%;padding:2em;">
+    <h1>registration</h1>
+    {{loadComponent('registration-form', [])}}
+    </div>
 {% endblock body %}
 
