added gifts class

--- a/components/main.scss
+++ b/components/main.scss
@@ -3,6 +3,9 @@ $primary: green;
 body {
     color: white;
     background: grey;
+    margin: auto;
+    width: 75%;
+    padding: 10px;
 }
 
 #main-content {
