a bit of formatting

--- a/templates/gift/request/index.html.twig
+++ b/templates/gift/request/index.html.twig
@@ -3,5 +3,6 @@
     <div style="padding:2em;">
         <div>gift request page</div>
         {{loadComponent('gift-request-form', [])}}
+        {{loadComponent('gift-request-list', [giftRequests])}}
     </div>
 {% endblock body %}
