--- a/components/main.scss
+++ b/components/main.scss
@@ -1,7 +1,7 @@
 $primary: green;
 @import "~bootstrap/scss/bootstrap";
 body {
-    color: white;
+    color: black;
     background: grey;
     margin: auto;
     width: 75%;
