logout added, sent to request list on login

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     </head>
     <body>
         <div id="main-content">
+            {{loadComponent('main-navigation', [is_granted("IS_AUTHENTICATED")])}}
             {% block body %}
             {% endblock %}
         </div>
