--- a/templates/gift/request/index.html.twig
+++ b/templates/gift/request/index.html.twig
@@ -1,8 +1,14 @@
 {% extends "base.html.twig" %}
 {% block body %}
     <div style="padding:2em;">
-        <div>gift request page</div>
-        {{loadComponent('gift-request-form', [])}}
-        {{loadComponent('gift-request-list', [giftRequests])}}
+        <h1>My Gift Requests</h1>
+        <div style="display:flex;flex-direction:column;gap:2em;">
+            <div>
+                {{loadComponent('gift-request-form', [])}}
+            </div>
+            <div>
+                {{loadComponent('gift-request-list', [giftRequests])}}
+            </div>
+        </div>
     </div>
 {% endblock body %}
