Add invitation feature with dialog and backend handling

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
         {% if isLoggedin == false %}
             {{loadComponent('login-form', [isLoggedin])}}
         {% else %}
-            <p>Loaded in</p>
+            {{loadComponent('invitation-dialog-button', [])}}
         {% endif %}
     </div>
 {% endblock body %}
