Add invitation panel and related components for user profile

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
         {% if isLoggedin == false %}
             {{loadComponent('login-form', [isLoggedin])}}
         {% else %}
-            {{loadComponent('invitation-dialog-button', [])}}
+            Logged In
         {% endif %}
     </div>
 {% endblock body %}
