--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,8 +8,8 @@
         {% endblock %}
         {{loadStyles()}}
         <div id="content">{% block content %}{% endblock %}</div>
-        {% block javascripts %}
-        {% endblock %} 
+        {# {% block javascripts %}   
+        {% endblock %}  #}
     </head>
     <body>
         <div id="main-content">
