--- a/templates/gift-request/edit/edit.html.twig
+++ b/templates/gift-request/edit/edit.html.twig
@@ -23,7 +23,7 @@
         </form>
         </div>
     </div>
-
+    
     <script>
         
         document.getElementById('editForm').addEventListener('submit', function(event) {
@@ -40,7 +40,7 @@
             .then(data => {
                 console.log('Success:', data);
                 if (data.success) {
-                    alert('Gift request updated successfully!');
+                    Notification.success('Gift request updated successfully!');
                 } else {
                     alert('An error occurred while updating the gift request.');
                 }
