--- a/templates/gift-request/edit/edit.html.twig
+++ b/templates/gift-request/edit/edit.html.twig
@@ -41,8 +41,9 @@
                 console.log('Success:', data);
                 if (data.success) {
                     Notification.success('Gift request updated successfully!');
+                    window.location.href = '/gift-request';
                 } else {
-                    alert('An error occurred while updating the gift request.');
+                    Notification.error('An error occurred while updating the gift request.');
                 }
             })
             .catch(error => {
