--- a/components/main.scss
+++ b/components/main.scss
@@ -33,3 +33,43 @@ body {
 .notification.error {
     background-color: rgb(189, 94, 94);
 }
+
+.notification.info {
+    background-color: rgb(174, 231, 69);
+}
+
+.confirm-dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.confirm-buttons-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.confirm-yes, .confirm-no {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.confirm-yes {
+    background-color: #4caf50;
+    color: #fff;
+}
+
+.confirm-no {
+    background-color: #f44336;
+    color: #fff;
+}
