--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -15,6 +15,7 @@
         </div>
         <div>
             <h3>Contacts</h3>
+            {{loadComponent('connection-panel', [])}}
             <ul>
                 {% for user in contacts %}
                     <li>{{ user.email }}</li>
