Add javascript block to base template for script management

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,8 @@
             {% block body %}
             {% endblock %}
         </div>
+        {% block javascript %}
+        {% endblock %}
         {{loadScripts()}}
     </body>
 </html>
